@@ -105,18 +105,18 @@ public class TestMgColumns {
     Table t = schema.create(table("SavedOn", column("id").setPkey(), column("value")));
 
     t.insert(row("id", 1, "value", "somevalue1"));
-    Row inserted = t.retrieveRows().get(0);
+    Row inserted = t.retrieveRows().getFirst();
 
     Row update = row("id", 1, "value", "somevalue2");
     update.setDateTime(MG_INSERTEDON, inserted.getDateTime(MG_INSERTEDON));
     update.setString(MG_INSERTEDBY, inserted.getString(MG_INSERTEDBY));
     t.save(update);
 
-    Row saved = t.retrieveRows().get(0);
+    Row saved = t.retrieveRows().getFirst();
     assertEquals("somevalue2", saved.getString("value"));
     assertEquals(inserted.getDateTime(MG_INSERTEDON), saved.getDateTime(MG_INSERTEDON));
     assertEquals(inserted.getString(MG_INSERTEDBY), saved.getString(MG_INSERTEDBY));
-    assertTrue(saved.getDateTime(MG_INSERTEDON).compareTo(saved.getDateTime(MG_UPDATEDON)) < 0);
+    assertTrue(saved.getDateTime(MG_INSERTEDON).isBefore(saved.getDateTime(MG_UPDATEDON)));
 
     t = schema.create(table("SavedOnSub").setInheritName("SavedOn"));
 
@@ -124,10 +124,10 @@ public class TestMgColumns {
     inserted = t.retrieveRows().get(0);
 
     t.save(row("id", 2, "value", "somevalue2"));
-    saved = t.retrieveRows().get(0);
+    saved = t.retrieveRows().getFirst();
     assertEquals("somevalue2", saved.getString("value"));
     assertEquals(inserted.getDateTime(MG_INSERTEDON), saved.getDateTime(MG_INSERTEDON));
     assertEquals(inserted.getString(MG_INSERTEDBY), saved.getString(MG_INSERTEDBY));
-    assertTrue(saved.getDateTime(MG_INSERTEDON).compareTo(saved.getDateTime(MG_UPDATEDON)) < 0);
+    assertTrue(saved.getDateTime(MG_INSERTEDON).isBefore(saved.getDateTime(MG_UPDATEDON)));
   }
 }
